# documentation

./: .gitignore
.circleci/: config.yml
.github/workflows/: main.yml
aws/: signv4auth.py  sigv4auth.md  sigv4auth.py
docker/: installation.md  usage.md
docopt/: README.md  my_command.py  my_command_bash4.sh  my_command_eof.sh  my_command_legacy.sh
github/: api_v3.md
python-web-stack/: README.md  pyproject.toml
python-web-stack/src/: my_fastapi_app.py  my_flask_app.py  my_wsgi_asgi_app.py
